<resources>
    <string name="app_name">FoxFireKeep</string>
    <string name="inventory">Inventory</string>
    <string name="sales">Sales</string>
    <string name="expenditure">Expenditure</string>
    <string name="forum">Forum</string>
    <string name="my_business">My Business</string>
    <string name="logo">Logo</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="reorder_quantity">Reorder Quantity</string>
    <string name="submit">Submit</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="tableau">Tableau</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="salesHLogo">Sales Horizontal Logo</string>
    <string name="expensesHLogo">Expenses Horizontal Logo</string>
    <string name="inventoryHLogo">Inventory Horizontal Logo</string>
    <string name="forumHLogo">Forum Horizontal Logo</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="salesInsertTop">Sales Insert Top</string>
    <string name="brand">Brand Name</string>
    <string name="price">Price</string>
    <string name="salesUpdateTop">Sales Update Top</string>
    <string name="id">ID</string>
    <string name="id_delete">ID of the item to be deleted</string>
    <string name="salesDeleteTop">Sales Delete Top</string>
    <string name="salesViewTop">Sales View Top</string>
    <string name="test">Test</string>
    <string name="id_delete_expenses">ID of the expenditute  to be deleted</string>
    <string name="id_delete_stock">ID of the inventory to be deleted</string>
    <string name="expense_type">Expenditure type</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="amt">Amount</string>
    <string name="tot_sales">Total Sales</string>
    <string name="tot_expenditure">Total Expenditure</string>
    <string name="tot_stock">Total Stock Value</string>
    <string name="tot_comments">Total comments</string>
    <string name="reset">Reset</string>
    <string name="businessHLogo">My Businesss Horizontal Logo</string>
    <string name="stocksInsertTop">Stock Insert Top</string>
    <string name="stockUpdateTop">Stock Update Top</string>
    <string name="stockDeleteTop">Stock Delete Top</string>
    <string name="stockViewTop">Stock View Top</string>
    <string name="expensesViewTop">Expenses View Top</string>
    <string name="expensesDeleteTop">Expenses Delete Top</string>
    <string name="expensesUpdateTop">Expenses Update Top</string>
    <string name="expensesInsertTop">Expenses Insert Top</string>
    <string name="userName">User Name</string>
    <string name="role">Role</string>
    <string name="comment">Comment</string>
    <string name="forumViewTop">Forum View Top</string>
    <string name="forumTop">Forum Top</string>
    <string name="item">Item</string>
    <string name="brand_view">Brand</string>
    <string name="reorder_col">Reorder</string>
    <string name="type_col">Type</string>


</resources>
