<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SalesView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.87"
        android:background="@color/color_primary_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/image_sales_view_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.285"
                app:srcCompat="@drawable/btnback" />

            <ImageView
                android:id="@+id/image_sales_view_logo"
                android:layout_width="337dp"
                android:layout_height="93dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/salesViewTop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_back"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/salesviewtop" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.13"
        android:orientation="horizontal"
        android:weightSum="100">


        <TextView
            android:id="@+id/text_sales_view_col_name_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:text="@string/id" />

        <TextView
            android:id="@+id/text_sales_view_col_name_item"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="22.5"
            android:text="@string/item_name" />

        <TextView
            android:id="@+id/text_sales_view_col_name_brand"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="22.5"
            android:text="@string/brand" />

        <TextView
            android:id="@+id/text_sales_view_col_name_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:text="@string/price" />

        <TextView
            android:id="@+id/text_sales_view_col_name_quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:text="@string/quantity" />
    </LinearLayout>

</LinearLayout>