<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SalesView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:background="@color/color_primary_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView30"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.388"
                app:srcCompat="@drawable/btnback" />

            <ImageView
                android:id="@+id/imageView30"
                android:layout_width="338dp"
                android:layout_height="95dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/expensesViewTop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.728"
                app:layout_constraintStart_toEndOf="@+id/button_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/expenseview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.87"
        android:background="@color/color_primary_darker"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expense_view_col_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/expense_view_col_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/type_col"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/expense_view_col_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/expense_view_col_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amt"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/expenses_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:background="@drawable/crud_operation_background">

    </ListView>

</LinearLayout>