<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Forum_View">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.87"
        android:background="@color/color_primary_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="9dp"
                android:contentDescription="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView31"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.73"
                app:srcCompat="@drawable/btnback" />

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="307dp"
                android:layout_height="101dp"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/forumViewTop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_back"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/forumview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.87"
        android:background="@color/color_primary_darker"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forum_view_col_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/id"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/forum_view_col_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/userName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/forum_view_col_role"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:text="@string/role"
            android:textSize="24sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/forum_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.20"
        android:background="@drawable/crud_operation_background">

    </ListView>

</LinearLayout>