<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    android:background="#ff8300"
    android:clickable="false"
    android:clipChildren="false"
    tools:context=".AddStocks">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="111dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="558dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/stocksa" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="386dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        android:text="@string/item_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="316dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        android:text="@string/quanity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="246dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/supplier"
        android:inputType="textPersonName"
        android:text="@string/supplier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="176dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/reorder_quantity"
        android:inputType="number"
        android:text="@string/reorder_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        app:layout_constraintVertical_bias="1.0"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="75dp"
        android:background="#00FAF3F3"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />


</androidx.constraintlayout.widget.ConstraintLayout>